--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <!-- RemoteViewsService -->
         <service android:name=".MdRemoteViewsService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <receiver android:name=".UpdateReceiver" android:exported="false" />
     </application>
 
 </manifest>
