add new widget icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/markdown_viewer_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MarkdownWidget"
         tools:targetApi="31">
+        <!--        android:roundIcon="@mipmap/ic_launcher_round"-->
 
         <!-- Main Activity -->
         <activity
@@ -36,7 +36,7 @@
             android:name=".MarkdownWidgetProvider"
             android:exported="true"
             android:label="Markdown Widget"
-            android:icon="@mipmap/ic_launcher">
+            android:icon="@mipmap/markdown_viewer_icon">
 
             <!-- Intent filter for widget updates -->
             <intent-filter>
