--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!-- Main Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name="com.adamdlewis.markdownwidget.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MarkdownWidget">
             <intent-filter>
@@ -26,14 +26,14 @@
         </activity>
 
         <!-- Widget Provider -->
-        <activity android:name=".MarkdownWidgetConfigureActivity"
+        <activity android:name="com.adamdlewis.markdownwidget.MarkdownWidgetConfigureActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
         <receiver
-            android:name=".MarkdownWidgetProvider"
+            android:name="com.adamdlewis.markdownwidget.MarkdownWidgetProvider"
             android:exported="true"
             android:label="Markdown Widget"
             android:icon="@mipmap/markdown_viewer_icon">
@@ -49,9 +49,9 @@
                 android:resource="@xml/widget_info" />
         </receiver>
         <!-- RemoteViewsService -->
-        <service android:name=".MdRemoteViewsService"
+        <service android:name="com.adamdlewis.markdownwidget.MdRemoteViewsService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
-        <receiver android:name=".UpdateReceiver" android:exported="false" />
+        <receiver android:name="com.adamdlewis.markdownwidget.UpdateReceiver" android:exported="false" />
     </application>
 
 </manifest>
